templates/mariadb-service.yaml
#==============================================================================
# MARIADB HEADLESS SERVICE
#==============================================================================

apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: database
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: database
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
