templates/redis-service.yaml
#==============================================================================
# WORDPRESS REDIS SERVICE
#==============================================================================

apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: cache
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: cache
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
